--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "poolblynklink",
   "version": "1.0.0",
   "description": "a poolController to IoT Blynk.cc API",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
